# music-bubbles-api

./: .gitignore  LICENSE  music-bubbles.py  music_bubbles.py  music_bubbles_api.py  pyproject.toml  test_music_bubbles.py
music_bubbles/: __init__.py  music_bubbles.py  straight_script.py  tune_to_coords.py
page/: index.html  style.css
